--- a/views/ccyp.ejs
+++ b/views/ccyp.ejs
@@ -146,7 +146,7 @@
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/pic1.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/Counter Cypher.png"></a>
 						</div>
 					</div>
 				
