--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -70,11 +70,7 @@
 		width: 100vw;
 		background-color: rgb(0, 0, 0);
     }
-    @media screen and (min-width: 425px){
-        .container{
-            margin-top:120px;
-        }
-    }
+    
 
   </style>
 
@@ -85,9 +81,9 @@
 <script>
   AOS.init();
 </script> 
-<div id="particles-background" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
+<!-- <div id="particles-background" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
 <div id="particles-foreground" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
-
+ -->
 
 <header style="height: 1vh !important;">
     <div id="navigation" class="">
@@ -176,7 +172,7 @@
      data-aos-duration="1000">
      <span class="yantrixdot">
 
-    <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+    <button  onclick="location.href = '';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
 
@@ -189,14 +185,14 @@
       <ul class="navigation-circle__list">
         <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Drone Challenge
+              <h3 class="navigation-circle-list-yan__title">Arduino Hackathon
               </h3>
              
              <!-- <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>-->
             </div></a></li>
         <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Trekkon
+              <h3 class="navigation-circle-list-yan__title">CAD Component
               </h3>
             </div></a></li>
          <!--  <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
@@ -258,7 +254,7 @@
        
      data-aos-duration="1000">
      <span class="matricksdot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/ml';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -269,13 +265,13 @@
       </svg>
       <ul class="navigation-circle__list">
         
-        <li class="navigation-circle-list-mat"><a class="navigation-circle-list-mat__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-mat"><a href='https://wissenaire.org/ml' class="navigation-circle-list-mat__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-mat__meta">
               <h3 class="navigation-circle-list-mat__title">ML
               </h3>
             </div></a></li>
         
-        <li class="navigation-circle-list-mat"><a class="navigation-circle-list-mat__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-mat"><a href="https://wissenaire.org/countercypher" class="navigation-circle-list-mat__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-mat__meta">
               <h3 class="navigation-circle-list-mat__title">Counter Cypher
               </h3>
@@ -316,7 +312,7 @@
        
      data-aos-duration="1000">
      <span class="coloqdot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/colloauiacs';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -326,23 +322,23 @@
         <circle id="mask-circle" cx="160" cy="160" r="158" fill="none" stroke-width="4" stroke="#0d47a1" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dasharray:1005.3088px;"></circle>
       </svg>
       <ul class="navigation-circle__list">
-        <li class="navigation-circle-list-col"><a class="navigation-circle-list-col__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-col"><a href="https://wissenaire.org/colloquiace" class="navigation-circle-list-col__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
               <h3 class="navigation-circle-list-col__title">Civil
               </h3>
             </div></a></li>
-        <li class="navigation-circle-list-col"><a class="navigation-circle-list-col__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-col"><a href="https://wissenaire.org/colloquiame" class="navigation-circle-list-col__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
               <h3 class="navigation-circle-list-col__title">Mechanical
               </h3>
             </div></a></li>
-        <li class="navigation-circle-list-col"><a class="navigation-circle-list-col__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-col"><a href="https://wissenaire.org/colloquiacs" class="navigation-circle-list-col__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
               <h3 class="navigation-circle-list-col__title"> Computer Science
               </h3>
             </div></a></li>
       
-        <li class="navigation-circle-list-col"><a  href ="https://wissenaire.org/"class="navigation-circle-list-col__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-col"><a  href ="https://wissenaire.org/colloquiaee" class="navigation-circle-list-col__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
               <h3 class="navigation-circle-list-col__title"> Electrical
               </h3>
@@ -371,7 +367,7 @@
         
      data-aos-duration="1000">
      <span class="landot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/valorant';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -381,14 +377,14 @@
         <circle id="mask-circle" cx="160" cy="160" r="158" fill="none" stroke-width="4" stroke="#0d47a1" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dasharray:1005.3088px;"></circle>
       </svg>
       <ul class="navigation-circle__list">
-        <li class="navigation-circle-list-lan"><a class="navigation-circle-list-lan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-lan"><a href="https://wissenaire.org/valorant" class="navigation-circle-list-lan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-lan__meta">
               <h3 class="navigation-circle-list-lan__title">Valorant
               </h3>
             </div></a></li>
-        <li class="navigation-circle-list-lan"><a class="navigation-circle-list-lan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-lan"><a href="https://wissenaire.org/csgo" class="navigation-circle-list-lan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-lan__meta">
-              <h3 class="navigation-circle-list-lan__title">Counter Strike
+              <h3 class="navigation-circle-list-lan__title">CSGO
               </h3>
             </div></a></li>
       
@@ -422,7 +418,7 @@ Battle hard and be the last one standing!! </p></div>
         
      data-aos-duration="1000">
      <span class="gacdot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/analogcircuitdesign';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -432,12 +428,12 @@ Battle hard and be the last one standing!! </p></div>
         <circle id="mask-circle" cx="160" cy="160" r="158" fill="none" stroke-width="4" stroke="#0d47a1" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dasharray:1005.3088px;"></circle>
       </svg>
       <ul class="navigation-circle__list">
-        <li class="navigation-circle-list-garc"><a class="navigation-circle-list-garc__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-garc"><a href="https://wissenaire.org/analogcircuitdesign" class="navigation-circle-list-garc__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Analog Circuit desing
+              <h3 class="navigation-circle-list-garc__title">Analog Circuit design
               </h3>
             </div></a></li>
-        <li class="navigation-circle-list-garc"><a class="navigation-circle-list-garc__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-garc"><a href="https://wissenaire.org/mathsolympiad" class="navigation-circle-list-garc__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
               <h3 class="navigation-circle-list-garc__title">Maths Olympaid
               </h3>
@@ -497,7 +493,7 @@ Battle hard and be the last one standing!! </p></div>
         
      data-aos-duration="1000">
      <span class="onndot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/sciencetoons';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -508,19 +504,19 @@ Battle hard and be the last one standing!! </p></div>
       </svg>
       <ul class="navigation-circle__list">
         
-        <li class="navigation-circle-list-onet"><a class="navigation-circle-list-onet__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-onet"><a href="https://wissenaire.org/sciencetoons" class="navigation-circle-list-onet__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-onet__meta">
               <h3 class="navigation-circle-list-onet__title">Science Toons
               </h3>
             </div></a></li>
         
-        <li class="navigation-circle-list-onet"><a class="navigation-circle-list-onet__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-onet"><a href="https://wissenaire.org/sherlock" class="navigation-circle-list-onet__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-onet__meta">
               <h3 class="navigation-circle-list-onet__title">Sherlock
               </h3>
             </div></a></li>
         
-        <li class="navigation-circle-list-onet"><a  href ="https://wissenaire.org/"class="navigation-circle-list-onet__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-onet"><a  href ="https://wissenaire.org/shutter"class="navigation-circle-list-onet__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-onet__meta">
               <h3 class="navigation-circle-list-onet__title">Shutter
               </h3>
@@ -550,7 +546,7 @@ Battle hard and be the last one standing!! </p></div>
        
      data-aos-duration="1000">
      <span class="exsdot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/pioneersplan';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -662,7 +658,7 @@ Battle hard and be the last one standing!! </p></div>
         
      data-aos-duration="1000">
      <span class="scdot">
-       <button  onclick="location.href = 'https://wissenaire.org/events.php';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/schoolchamp';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
@@ -729,7 +725,7 @@ Battle hard and be the last one standing!! </p></div>
 
 
   	
-    <script type="text/javascript" src="./javascripts/canvas.js"></script>  
+    <!-- <script type="text/javascript" src="./javascripts/canvas.js"></script>   -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
     <script src="./javascripts/jquery.min.js"></script>
 
