--- a/public/stylesheets/workshop.css
+++ b/public/stylesheets/workshop.css
@@ -1,331 +1,150 @@
-*,
-*:before,
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
+*{
+  margin:0;
+  padding:0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  font-size: 62.5%;
-}
-@media only screen and (max-width: 800px) {
-  html {
-    font-size: 57%;
-  }
-}
 
-body {
-  background-color: #000;
-  color: #fff;
-  padding: 8rem;
 }
-@media only screen and (max-width: 1000px) {
-  body {
-    padding: 0;
-  }
-}
-
-.container {
-  position: relative;
-  overflow: hidden;
-  border-radius: 5rem;
-}
-@media only screen and (max-width: 1000px) {
-  .container {
-    border-radius: 0;
-  }
-}
-
-.slider {
+body{
+  min-height:100vh;
   display: flex;
-  width: 500%;
-  height: 55rem;
-  transition: all 0.25s ease-in;
-  transform: translateX(0);
-}
-@media only screen and (max-width: 1000px) {
-  .slider {
-    height: 100vh;
-  }
-}
-.slider .box {
-  height: 100%;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
   align-items: center;
-  overflow: hidden;
+}
+.wrapper{
+  width:100%;
+  height:100%;
+  min-height: 100vh;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: black;
+ /* background-image: url("https://images.pexels.com/photos/3503629/pexels-photo-3503629.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");*/
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden; 
 }
-@media only screen and (max-width: 650px) {
-  .slider .box {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
-  }
-}
-.slider .box .bg {
-  padding: 2rem;
-  background-color: rgba(0, 0, 0, 0.2);
-  width: 65%;
-  transform: skewX(7deg);
-  position: absolute;
-  height: 100%;
-  left: -10%;
-  padding-left: 20rem;
-  transform-origin: 0 100%;
-}
-@media only screen and (max-width: 800px) {
-  .slider .box .bg {
-    width: 65%;
-  }
-}
-@media only screen and (max-width: 650px) {
-  .slider .box .bg {
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    height: 54%;
-    transform: skewX(0deg);
-  }
-}
-.slider .box .bg::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: inherit;
-  pointer-events: none;
-  transform: skewX(10deg);
-}
-@media only screen and (max-width: 650px) {
-  .slider .box .bg::before {
-    width: 120%;
-    bottom: 0;
-    transform: skewX(0deg);
-  }
-}
-.slider .box .details {
-  padding: 5rem;
-  padding-left: 10rem;
-  z-index: 100;
-  grid-column: 1/span 1;
-  grid-row: 1/-1;
-}
-@media only screen and (max-width: 650px) {
-  .slider .box .details {
-    grid-row: 2/span 1;
-    grid-column: 1/-1;
-    text-align: center;
-    padding: 2rem;
-    transform: translateY(-9rem);
-    position: absolute;
-    top: 15%;
-  }
-}
-.slider .box .details h1 {
-  font-size: 3.5rem;
-  font-weight: 500;
-  margin-bottom: 0.5rem;
-}
-.slider .box .details p {
-  display: inline-block;
-  font-size: 1.3rem;
-  color: #B5B4B4;
-  margin-bottom: 2rem;
-  margin-right: 5rem;
-}
-@media only screen and (max-width: 800px) {
-  .slider .box .details p {
-    margin-right: 0;
-  }
-}
-.slider .box .details button {
-  padding: 1rem 3rem;
-  color: #fff;
-  border-radius: 2rem;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.slider .box .details button:hover {
-  opacity: 0.8;
-}
-.slider .box .details button:focus {
-  outline: none;
-  border: none;
-}
-.slider .box1 {
-  background-color: #500033;
-}
-.slider .box1 .illustration .inner {
-  background-color: #FF0077;
-}
-
-.slider .box1 button {
-  background-color: #FF0077;
-}
-.slider .box2 {
-  background-color: #000050;
-}
-.slider .box2 .illustration .inner {
-  background-color: #0033FF;
-}
-
-.slider .box2 button {
-  background-color: #0033FF;
-}
-.slider .box3 {
-  background-color: #00501D;
-}
-.slider .box3 .illustration .inner {
-  background-color: #00FF44;
-}
-
-.slider .box3 button {
-  background-color: #00FF44;
-}
-.slider .box4 {
-  background-color: #554D00;
-}
-.slider .box4 .illustration .inner {
-  background-color: #FF4E00;
-}
-
-.slider .box4 button {
-  background-color: #FF4E00;
-}
-.slider .box5 {
-  background-color: #300050;
-}
-.slider .box5 .illustration .inner {
-  background-color: #8000FF;
-}
-
-.slider .box5 button {
-  background-color: #8000FF;
-}
-.slider .illustration {
-  grid-column: 2/-1;
-  grid-row: 1/-1;
-  justify-self: center;
-}
-@media only screen and (max-width: 650px) {
-  .slider .illustration {
-    grid-row: 1/span 1;
-    grid-column: 1/-1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.slider .illustration div {
-  height: 37.5rem;
-  width: 37rem;
-  border-radius: 3rem;
-  background-color: #FF0077;
+.wrapper .box{
   position: relative;
-  transform: skewX(0deg);
-  margin-bottom: 5rem;
-}
-@media only screen and (max-width: 800px) {
-  .slider .illustration div {
-    height: 20rem;
-    width: 15rem;
-  }
-}
-.slider .illustration div::after, .slider .illustration div::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  border-radius: 3rem;
-  top: 0;
-  left: 0;
-}
-.slider .illustration div::after {
-  transform: translate(4rem, -1rem);
-}
-.slider .illustration div::before {
-  transform: translate(2rem, -2rem);
+  width:20vw;
+  height:65vh;
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+  border-radius:15px;
+  margin:30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top:1px solid rgba(255,255,255,0.5);
+  border-left:1px solid rgba(255,255,255,0.5);
+  backdrop-filter: blur(5px);
+  transform-style: preserve-3d;
+  transform: perspective(800px) 
 }
 
-.prev,
-.next,
-.trail {
-  z-index: 10000;
-  position: absolute;
-}
 
-.prev,
-.next {
-  width: 4rem;
-  cursor: pointer;
-  opacity: 0.2;
-  transition: all 0.3s ease;
-}
-@media only screen and (max-width: 650px) {
-  .prev,
-.next {
-    display: none;
-  }
-}
-.prev:hover,
-.next:hover {
-  opacity: 1;
-}
-
-.prev {
-  top: 50%;
-  left: 2%;
-  transform: translateY(-50%);
-}
-
-.next {
-  top: 50%;
-  right: 2%;
-  transform: translateY(-50%);
-}
-
-.trail {
-  bottom: 5%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 60%;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1rem;
+h2{
+  color:#f5f5f5;
+  font-size:2.5rem;
   text-align: center;
-  font-size: 1.5rem;
+  font-family: 'Acme', sans-serif;
 }
-@media only screen and (max-width: 650px) {
-  .trail {
-    width: 90%;
-    bottom: 1%;
-  }
+p{
+  color:#ccc;
+  margin:20px 10px;
+  font-family: 'Fira Code', monospace;
 }
-.trail div {
-  padding: 2rem;
-  border-top: 3px solid #fff;
+ul{
+  list-style: none;
+  width:100%;
+  /* display: flex; */
+  justify-content: space-evenly;
+  margin:30px 0;
+  padding:10px;
+}
+
+li{
   cursor: pointer;
-  opacity: 0.3;
+  width:30px;
+  /* height:30px; */
+}
+i{
+  color:#ccc;
+  font-size: 1.5rem;
   transition: all 0.3s ease;
 }
-.trail div:hover {
-  opacity: 0.6;
+li:hover .fa-twitter{
+  transform:translate3d(0,-10px,20px);
+  color:#00acee;
 }
-@media only screen and (max-width: 650px) {
-  .trail div {
-    padding: 1rem;
-  }
+li:hover .fa-github{
+  transform:translate3d(0,-10px,20px);
+  color:gray;
+}
+li:hover .fa-linkedin-in{
+  transform:translate3d(0,-10px,20px);
+  color:#077099;
+}
+.imgholder{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+   border-radius:15px;
+   filter: blur(1px);
+-webkit-filter: blur(1px);
+}
+.knowmore {
+display: block;
+position:absolute;
+top: 70%;
+left:32.5%;
+border: 1px solid white;
+border-radius: 4px;
+color: white;
+padding: 10px;
+text-align: center;
+background: rgba(0, 0, 0, .6);
+margin: 50px -12px;
+outline: none;
+box-shadow: 0 0 10px rgba(0,0,0,.5);
+transition: all .2s;
+z-index: 100;
+
+}
+.knowmore button:hover {
+background: rgba(255, 255, 255, .8);
+color: black;
+box-shadow: 0 0 10px rgba(255,255,255,.5);
+mix-blend-mode: screen;
 }
 
-.active {
-  opacity: 1 !important;
+@media only screen and (max-width: 350px) {
+ .wrapper .box{
+  height: 70vh;
+  width: 90vw;
+   margin-left: 10vw;
+}
 }
 
+@media only screen and (min-width: 351px) and (max-width: 699px) {
+ .wrapper .box{
+  height: 70vh;
+  width: 80vw;
+  margin-left: 12.5vw;
+}
+}
+
+@media only screen and (min-device-width: 700px) and  (max-device-width: 1200px) {
+ .wrapper .box{
+  height: 60vh;
+  width: 50vw;
+   margin-left: 25vw;
+}
+p{
+  font-size: 20px;
+}
+}
