--- a/views/automob.ejs
+++ b/views/automob.ejs
@@ -147,7 +147,7 @@
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/automobiles.jpeg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/automobiles.jpg"></a>
 						</div>
 					</div>
 				
@@ -262,13 +262,15 @@ practically working on it.</p>
 				<i class="fa fa-award"></i>&ensp;Workshop Co-ordinator<br>
 				<i class="fa fa-envelope"></i>&ensp;bcv10@iitbbs.ac.in<br>
 				<i class="fa fa-phone"></i>&ensp;6303317836</p>
-			</div>
-            <div class="col-12 col-md-6">
-				<p style="color: white; font-weight: 650; font-size: 28px;"> </p>
+				<br>
 				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;Aakanksha<br>
 				<i class="fa fa-award"></i>&ensp;Workshop Co-ordinator<br>
 				<i class="fa fa-envelope"></i>&ensp;ajn10@iitbbs.ac.in<br>
 				<i class="fa fa-phone"></i>&ensp;9326195804</p>
+			</div>
+            <div class="col-12 col-md-6">
+				<p style="color: white; font-weight: 650; font-size: 28px;"> Organising Partner</p>
+				<a href="http://www.eisystems.in/"><img class="img-fluid" src="./images/EISystems.jpeg"></a>
 			</div>
 		</div>
 	
