--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -144,7 +144,7 @@
         <div class="row">
 
              <div class="box" >
-                <div class="imgholder" style="background-image: url('./images/automobiles.jpeg');filter: blur(2px);
+                <div class="imgholder" style="background-image: url('./images/automobiles.jpg');filter: blur(2px);
   -webkit-filter: blur(2px);"> </div>
                 <div class="description">
                   <bold>   <h2 style="color: white">Automobile & IC Engines</h2></bold>
