--- a/views/aiml.ejs
+++ b/views/aiml.ejs
@@ -232,10 +232,10 @@
 			</div>
 			<div class="col-12 col-md-6" style="margin-top: 2.5%;">
 				<p style="color: white; font-weight: 650; font-size: 28px;">Topics to be covered</p>
-				<p style="color:#fff;">Session 1: Introduction of Machine Learning and Artificial Intelligence <br>
-                    Session 2: Python/Anaconda <br>
-                    Session 3: Machine Learning Algorithms<br>
-                    Session 4: Introduction of Neural Network (Deep Learning) and Project<br>
+				<p style="color:#fff;">Session 1: Introduction of Artificial Intelligence and Machine Learning					<br>
+                    Session 2: Supervised Learning, Regression <br>
+                    Session 3: Deep Learning, Neural Networks<br>
+                    Session 4: Tensorflow and Project<br>
                     Check pdf for more info (Click Know more)</p>
 				
 				
