--- a/views/automob.ejs
+++ b/views/automob.ejs
@@ -240,8 +240,8 @@ practically working on it.</p>
                     Session 6: Electric Vehicles<br>
                     Check pdf for more info (Click Know more)</p>
 				
-				<p style="color: white; font-weight: 650; font-size: 28px;"> Event Format </p>
-				<p style="color:#fff; line-height: 2;"> • Participants will be given a design experiment where they have to design a circuit and simulate it in the “LT spice software” and results with screenshots of LT spice schematic and required graphs should be attached in the final report.<br>			
+				<!-- <p style="color: white; font-weight: 650; font-size: 28px;"> Event Format </p>
+				<p style="color:#fff; line-height: 2;"> • Participants will be given a design experiment where they have to design a circuit and simulate it in the “LT spice software” and results with screenshots of LT spice schematic and required graphs should be attached in the final report.<br>			 -->
 
 
 				
