--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <div class="box" >
-                <div class="imgholder" style="background-image: url('./images/android.jpg');filter: blur(2.5px);
-  -webkit-filter: blur(2.5px);"> </div>
+                <div class="imgholder" style="background-image: url('./images/android.jpg');
+  "> </div>
                 <div class="description">
                     <bold> <h2>Android Development</h2></bold>
                   <bold>  <p style="color: white">            Android development is the process by which applications are created for devices running
@@ -130,8 +130,8 @@
                 </div>
             </div>
             <div class="box" >
-                 <div class="imgholder" style="background-image: url('./images/cybersecurity.jpg');filter: blur(2px);
-  -webkit-filter: blur(2px);"> </div>
+                 <div class="imgholder" style="background-image: url('./images/cybersecurity.jpg');
+  "> </div>
                 <div class="description">
                  <bold>    <h2 style="color: black">Cyber Security & Ethical Hacking</h2></bold>
                 <bold> <strong><p style="color: black">Cyber test and evaluation continue to be on the forefront of the acquisition community.</p></strong></bold>
@@ -144,8 +144,8 @@
         <div class="row">
 
              <div class="box" >
-                <div class="imgholder" style="background-image: url('./images/automobiles.jpg');filter: blur(2px);
-  -webkit-filter: blur(2px);"> </div>
+                <div class="imgholder" style="background-image: url('./images/automobiles.jpg');
+  "> </div>
                 <div class="description">
                   <bold>   <h2 style="color: white">Automobile & IC Engines</h2></bold>
                <bold>  <p style="color: white">Automobile Electric Vehicles Workshop
@@ -157,8 +157,8 @@
             </div>
 
               <div class="box" >
-                <div class="description"><div class="imgholder" style="background-image: url('./images/bridgedesign.jpg');filter: blur(1.5px);
-  -webkit-filter: blur(1.5px);"> </div>
+                <div class="description"><div class="imgholder" style="background-image: url('./images/bridgedesign.jpg');
+  "> </div>
                   <bold>   <h2 style="color: white">Bridge Design</h2></bold>
                     <bold> <p style="color: white">This course deals with bridge
                       systems, highlighting the more technical aspects of the design. </p></bold>
