--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,10 @@
 	#gifimage{
 		display: block;
 		margin: auto; 
-		width: 65%;
+		width: 68%;
 		height: auto;
+		position: relative;
+		top: -14%;
 	}
 	@media screen and (max-width: 500px) {
 		.gifdiv{
@@ -39,7 +41,7 @@
 		#gifimage{
 			display: block;
 			margin: auto; 
-			width: 100%;
+			width: 110%;
 			height: auto;
 			position: relative;
 			top: 15%;
@@ -124,10 +126,10 @@
 	  </div>
 	</header>
 
-  <img src="./images/contact1.png" class="d-none d-md-block" style="position:absolute; top:20%; right:20%; height:70px; animation: book 2s ease-in-out infinite;" >
-  <img src="./images/competitions1.png" class="d-none d-md-block" style="position:absolute; top:60%; right:90%; height:70px; animation: book 2s ease-in-out infinite;" >
-  <img src="./images/initiatives1.png" class="d-none d-md-block" style="position:absolute; top:60%; right:2%; height:70px; animation: book 2s ease-in-out infinite;" >
-  <img src="./images/workshops1.png" class="d-none d-md-block" style="position:absolute; top:20%; right:80%; height:70px; animation: book 2s ease-in-out infinite;">
+  <a href="/contact" class="d-none d-md-block" style="position:absolute; top:20%; right:20%; height:70px; animation: book 2s ease-in-out infinite;"><img width="70px" src="./images/contact1.png"  ></a>
+  <a href="/competitions"  class="d-none d-md-block" style="position:absolute; top:60%; right:90%; height:70px; animation: book 2s ease-in-out infinite;"><img width="70px" src="./images/competitions1.png" ></a>
+  <a href="/initiatives"  class="d-none d-md-block" style="position:absolute; top:60%; right:2%; height:70px; animation: book 2s ease-in-out infinite;" ><img width="70px" src="./images/initiatives1.png"></a>
+  <a href="/workshops" class="d-none d-md-block" style="position:absolute; top:20%; right:80%; height:70px; animation: book 2s ease-in-out infinite;"><img width="70px" src="./images/workshops1.png" ></a>
 
    
   <div id="particles-background" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
