--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -103,7 +103,7 @@
 
 <div class="wrapper" style="margin-top: 15%;">
     <div class="row">
-            <div class="box"><div class="imgholder" style="background-image: url('./images/aiml.jpg');"> </div>
+            <div class="box"><div class="imgholder" style="background-image: url('./images/aiml.jpeg'); background-size: cover; background-position: center;"> </div>
                 <div class="description " >
                 <bold>     <h2>AI & ML</h2></bold>
            <bold>  <p style="color: white">Machine learning provides systems the ability to automatically learn and improve from experience
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="box" >
-                <div class="imgholder" style="background-image: url('./images/android.jpg');
+                <div class="imgholder" style="background-image: url('./images/android.jpg'); background-size: cover; background-position: center ;
   "> </div>
                 <div class="description">
                     <bold> <h2>Android Development</h2></bold>
@@ -130,11 +130,11 @@
                 </div>
             </div>
             <div class="box" >
-                 <div class="imgholder" style="background-image: url('./images/cybersecurity.jpg');
+                 <div class="imgholder" style="background-image: url('./images/cybersecurity.jpg'); background-size: cover; background-position: center ;
   "> </div>
                 <div class="description">
                  <bold>    <h2 style="color: black">Cyber Security & Ethical Hacking</h2></bold>
-                <bold> <strong><p style="color: black">Cyber test and evaluation continue to be on the forefront of the acquisition community.</p></strong></bold>
+                <bold> <strong><p style="color: black;" >Cyber test and evaluation continue to be on the forefront of the acquisition community.</p></strong></bold>
                     <ul class="list">
                        <button  onclick="location.href = 'https://wissenaire.org/cybersecurity';" class="knowmore">KNOW MORE</button>
                     </ul>
@@ -144,7 +144,7 @@
         <div class="row">
 
              <div class="box" >
-                <div class="imgholder" style="background-image: url('./images/automobiles.jpg');
+                <div class="imgholder" style="background-image: url('./images/automobiles.jpg'); background-size: cover; background-position: center ;
   "> </div>
                 <div class="description">
                   <bold>   <h2 style="color: white">Automobile & IC Engines</h2></bold>
@@ -157,7 +157,7 @@
             </div>
 
               <div class="box" >
-                <div class="description"><div class="imgholder" style="background-image: url('./images/bridgedesign.jpg');
+                <div class="description"><div class="imgholder" style="background-image: url('./images/bridgedesign.jpg');background-size: cover; background-position: center ;
   "> </div>
                   <bold>   <h2 style="color: white">Bridge Design</h2></bold>
                     <bold> <p style="color: white">This course deals with bridge
@@ -177,9 +177,9 @@
 <script src="./javascripts/jquery.min.js"></script>
   <script>
     VanillaTilt.init(document.querySelectorAll(".box"), {
-		max: 25,
+		    max: 15,
         speed: 400,
-        easing:"cubic-bezier(.03,.98,.52,.99)",
+        easing:"cubic-bezier(1,1,1,1)",
         perspective:500,
         transition:true
     });
