--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
   	<link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
     <link href="./stylesheets/canvas.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
-	<link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
+	<link rel="icon" type="image/png"  href="./images/icon.ico" type="image/x-icon">
   <style>
     body{
 		width: 100vw;
@@ -29,10 +29,10 @@
 	#gifimage{
 		display: block;
 		margin: auto; 
-		width: 68%;
+		width: 65%;
 		height: auto;
 		position: relative;
-		top: -14%;
+		top: -12%;
 	}
 	@media screen and (max-width: 500px) {
 		.gifdiv{
@@ -126,10 +126,10 @@
 	  </div>
 	</header>
 
-  <a href="/contact" class="d-none d-md-block" style="position:absolute; top:20%; right:20%; height:70px; animation: book 2s ease-in-out infinite;"><img width="70px" src="./images/contact1.png"  ></a>
-  <a href="/competitions"  class="d-none d-md-block" style="position:absolute; top:60%; right:90%; height:70px; animation: book 2s ease-in-out infinite;"><img width="70px" src="./images/competitions1.png" ></a>
-  <a href="/initiatives"  class="d-none d-md-block" style="position:absolute; top:60%; right:2%; height:70px; animation: book 2s ease-in-out infinite;" ><img width="70px" src="./images/initiatives1.png"></a>
-  <a href="/workshops" class="d-none d-md-block" style="position:absolute; top:20%; right:80%; height:70px; animation: book 2s ease-in-out infinite;"><img width="70px" src="./images/workshops1.png" ></a>
+  <a href="/contact" class="d-none d-md-block" style="position:absolute; top:20%; right:20%; height:70px; animation: book 2s ease-in-out infinite; z-index:100;"><img title="Contact" width="70px" src="./images/contact1.png"  ></a>
+  <a href="/competitions"  class="d-none d-md-block" style="position:absolute; top:60%; right:90%; height:70px; animation: book 2s ease-in-out infinite; z-index:100;"><img title="Competitions" width="70px" src="./images/competitions1.png" ></a>
+  <a href="/initiatives"  class="d-none d-md-block" style="position:absolute; top:60%; right:2%; height:70px; animation: book 2s ease-in-out infinite; z-index:100;" ><img title="Initiatives" width="70px" src="./images/initiatives1.png"></a>
+  <a href="/workshops" class="d-none d-md-block" style="position:absolute; top:20%; right:80%; height:70px; animation: book 2s ease-in-out infinite; z-index:100;"><img title="Workshops" width="70px" src="./images/workshops1.png" ></a>
 
    
   <div id="particles-background" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
