--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -532,7 +532,7 @@ Battle hard and be the last one standing!! </p></div>
        <div data-aos="fade-left"
      data-aos-easing="#example-easing"
     
-     data-aos-duration="1500">   <p>writeup needed
+     data-aos-duration="1500">   <p>Are you passionate about photography? Wanna indulge yourself in the role of detective? Wanna flavour your scientific knowledge with humour? This is a platform to showcase all these talents. Buckle up and be a part of On Net which consists of Shutter, Sherlock, Scientoons
         </p></div>
       </div>
     </div>
