--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -267,7 +267,7 @@
         
                 <div class="form-group">
                     <label>Reference ID of CA (If any)</label>
-                    <input type="text" class="form-control" name="caref" placeholder="Eg: W21CA0001" required>
+                    <input type="text" class="form-control" name="caref" placeholder="Eg: W21CA0001">
                 </div>
                 
                 <button type="submit" id="submit" class="btn btn-dark">Submit</button>
