--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -280,7 +280,7 @@
                 console.log('ok')
                 $.ajax({
                     type: "POST",
-                    url: '/profile',
+                    url: '/profilefill',
                     data: form.serialize(), 
                     success: function(result)
                     {
