--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -276,11 +276,11 @@
             <script>
               $("#form").submit(function(e) {
                 e.preventDefault(); 
-                var form = $(this);
+                var form = $('#form');
                 console.log('ok')
                 $.ajax({
                     type: "POST",
-                    url: '/profilefill',
+                    url: '/profile',
                     data: form.serialize(), 
                     success: function(result)
                     {
