--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -195,7 +195,7 @@
     </div>
     <% if(participant.wissid){
       %>
-    <div class="" style="margin-top: 100px;">
+    <div class="row" style="margin-top: 100px;">
         <div class="col-12 col-md-6">
             <div class="leaderboard_profile" style="border: 5px solid gold; border-radius: 8px;">
                 <img src="<%=participant.photo%>" style="width: 100%;">
