--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -147,7 +147,7 @@
                 <div class="imgholder" style="background-image: url('./images/automobiles.jpg'); background-size: cover; background-position: center ;
   "> </div>
                 <div class="description">
-                  <bold>   <h2 style="color: white">Automobile & IC Engines</h2></bold>
+                  <bold>   <h2 style="color: white">Automobile & Electric Vehicles</h2></bold>
                <bold>  <p style="color: white">Automobile Electric Vehicles Workshop
                 focuses from Basics to Advanced concepts in Automobile Engineering. </p></bold>
                     <ul class="list">
