--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -322,6 +322,8 @@
           } %>
         </main>
     </div>
+  
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 	<script src="./javascripts/jquery.min.js"></script>
 </body>
