--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -288,7 +288,7 @@
                                 text: 'Welcome to Wissenaire family !',
                                 icon: 'success'
                             });
-                          window.location.replace('');
+                          window.location.href='/profile';
                         }
                         else{
                             new swal({
