--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
   	<link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
     <link href="./stylesheets/canvas.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
-	<link rel="icon" type="image/png"  href="./images/icon.ico" type="image/x-icon">
+	<link rel="icon" type="image/png"  href="./images/logo-mini.png" type="image/x-icon">
   <style>
     body{
 		width: 100vw;
