--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -282,7 +282,7 @@
                     data: form.serialize(), 
                     success: function(result)
                     {
-                        if(result === 'success'){
+                        if(result){
                             new swal({
                                 title: 'Success',
                                 text: 'Welcome to Wissenaire family !',
