--- a/views/cyber.ejs
+++ b/views/cyber.ejs
@@ -192,7 +192,7 @@ presence of a cybersecurity threat.</p>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
 					<% console.log(participant);
-					 if (participant.name) { %>
+					 if (participant.wissid) { %>
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('cyber-security-ethical-hacking-142304');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
