--- a/views/automob.ejs
+++ b/views/automob.ejs
@@ -190,7 +190,7 @@ practically working on it.</p>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
 					<% console.log(participant);
-					 if (participant.name) { %>
+					 if (participant.wissid) { %>
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('automobiles-electric-vehicles-121432');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
