--- a/views/bridge.ejs
+++ b/views/bridge.ejs
@@ -189,7 +189,7 @@ bridges.</p>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
 					<% console.log(participant);
-					 if (participant.name) { %>
+					 if (participant.wissid) { %>
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('bridge-design-024120');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
